--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,32 @@ dependencies:
   cupertino_icons: ^1.0.6
   intl: ^0.19.0
 
+  dio: ^5.7.0
+  # Third party service: Firebase, Livestream Agora, AWS,...
+#  firebase_analytics: ^11.3.3
+#  firebase_core: ^3.6.0
+#  firebase_crashlytics: ^4.1.3
+
+  # Architecture and State management
+  freezed_annotation: ^2.4.1
+  envied: ^1.0.0
+  equatable: ^2.0.7
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  go_router: ^14.6.2
+  json_annotation: ^4.9.0
+  path_provider: ^2.1.4
+  shared_preferences: ^2.2.3
+  supabase_flutter: ^2.8.1
+  flutter_udid: ^3.0.0
+
+  # UI
+  flutter_datetime_picker_plus: ^2.2.0
+
+
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
