--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   path_provider: ^2.1.4
   shared_preferences: ^2.2.3
   supabase_flutter: ^2.8.1
-  flutter_udid: ^3.0.0
+  device_info_plus: ^10.1.2
 
   # UI
   flutter_datetime_picker_plus: ^2.2.0
@@ -66,14 +66,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  custom_lint: ^0.6.4
   flutter_lints: ^3.0.0
-
+  envied_generator: ^1.0.0
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
+  riverpod_generator: ^2.4.0
+  riverpod_lint: ^2.3.10
+  build_runner: ^2.4.9
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
