--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   dio: ^5.7.0
   # Third party service: Firebase, Livestream Agora, AWS,...
 #  firebase_analytics: ^11.3.3
-#  firebase_core: ^3.6.0
+  firebase_core: ^3.4.0
+  firebase_messaging: ^15.1.0
+  firebase_in_app_messaging: ^0.8.0+4
+  firebase_app_installations: ^0.3.1+1
 #  firebase_crashlytics: ^4.1.3
 
   # Architecture and State management
@@ -58,10 +61,6 @@ dependencies:
 
   # UI
   flutter_datetime_picker_plus: ^2.2.0
-
-
-
-
 
 dev_dependencies:
   flutter_test:
