--- a/.github/workflows/flutter_apk.yml
+++ b/.github/workflows/flutter_apk.yml
@@ -33,12 +33,12 @@ jobs:
       - name: build apk
         run: flutter build apk
 
-#      - name: "Deploy to distribution"
-#        uses: wzieba/Firebase-Distribution-Github-Action@v1.7.0
-#        with:
-#          appId:
-#          serviceCredentialsFile:
-#          serviceCredentialsFileContent:
-#          file:
+      - name: "Deploy to distribution"
+        uses: wzieba/Firebase-Distribution-Github-Action@v1.7.0
+        with:
+          appId: ${{secrets.FIREBASE_APP_ID}}
+          serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
+          groups: testers
+          file: build\app\outputs\flutter-apk\app-release.apk
 
 
