--- a/.github/workflows/flutter_apk.yml
+++ b/.github/workflows/flutter_apk.yml
@@ -24,11 +24,10 @@ jobs:
       - name: "Set enviroment variable"
         run: echo "$GITHUB_WORKSPACE/_flutter/bin" >> $GITHUB_PATH
 
-      - name: "Set up JAVA 17.0.11"
-        uses: actions/setup-java@v4.6.0
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          java-version: 17.0.11
-          distribution: 'jetbrains'
+          java-version: 11
 
       - run: flutter pub get
       - name: build apk
